--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^6.26.0",
+    "sonner": "^1.7.2",
     "sort-by": "^0.0.2",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
